# Equimo

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  devenv.nix  pyproject.toml
.github/workflows/: publish.yml  python-tests.yaml
docs/: usage.md
docs/finetuning/: adapters.md  concepts.md  debugging.md  index.md  linear_probe.md  llrd.md  lora.md  lpft.md  method_defaults.md  model_merging.md  partial_full.md  prompts.md  references.md  selectors.md  serialization.md  with_optax.md  with_rollfast.md
equimo/: io.py  utils.py
equimo/converters/: dinov2.py
equimo/layers/: attention.py  convolution.py  ffn.py  mamba.py  norm.py  sharing.py
equimo/models/: partialformer.py  vit.py
equimo/ops/models/: fastervit.py
examples/: language_encoder.py  vision_feature_extraction.py
examples/finetuning/: adapter_ast.py  full_ft_llrd_optax.py  linear_probe_vit.py  lora_vit_rollfast.py  wise_ft.py
models/: ast.py  dinov2.py  dinov3.py  eupe.py  siglip2.py  tabpfn3.py  tips.py  tips_text.py  torch_models.py
src/equimo/: __init__.py  io.py  registry.py  serialization.py  utils.py
src/equimo/audio/: __init__.py  io.py
src/equimo/conversion/: utils.py
src/equimo/core/: __init__.py  emamodel.py
src/equimo/finetune/: __init__.py  _typing.py  config.py  continued_ssl.py  feature_extraction.py  heads.py  inspection.py  labels.py  masks.py  merging.py  paths.py  pooling.py  profiles.py  recipes.py  regularization.py  selectors.py  serialization.py  surgery.py  tags.py
src/equimo/implicit/: __init__.py  _base.py  deq.py  injectors.py  stabilizers.py  strategies.py
src/equimo/language/: __init__.py  models.py  tokenizers.py
src/equimo/layers/: __init__.py  activation.py  attention.py  convolution.py  downsample.py  dropout.py  ffn.py  (+7 more)
tests/: test_activation.py  test_attention.py  test_audio_ast.py  test_audio_patch.py  test_convolution.py  test_downsample.py  test_dropout.py  test_ffn.py  test_generic.py  test_implicit.py  test_io.py  test_language.py  test_mamba.py  test_modalities.py  test_models.py  test_norm.py  test_parcae.py  test_patch.py  test_posemb.py  test_squeeze_excite.py  test_tabpfn.py  test_tabular_layers.py  test_utils.py  test_wavelet.py
tests/data/: ast_base_patch16_audioset_10_10_0_4593_reference.npz  ast_base_patch16_speechcommands_v2_10_10_0_9812_reference.npz  dinov2_vits14_reg_reference.npz  dinov3_vits16_reference.npz  eupe_vitt16_reference.npz  siglip2_vitb16_256_reference.npz  tabpfn_v3_classifier_default_reference.npz
tests/finetune/: conftest.py  fixtures.py  test_adapters.py  test_advanced_merging.py  test_audio_recipes.py  test_continued_ssl.py  test_delta_compatibility.py  test_dora.py  test_feature_extraction.py  test_finetune_bundle.py  test_heads.py  test_ia3.py  test_inspection.py  test_integrations.py  test_labels.py  test_language_recipes.py  test_llrd.py  test_lora.py  test_lora_merged_linear.py  test_lora_plus_labels.py  test_masks.py  test_merging.py  test_modern_merging.py  test_paths.py  test_peft_invariants.py  test_peft_methods.py  test_pissa.py  test_pooling.py  test_prefix.py  test_prompts.py  test_rank_masked_lora.py  test_recipes_baseline.py  test_regularization.py  test_rslora.py  test_scaffolding.py  test_scale_shift.py  test_selectors.py  test_serialization_lora.py  test_side_tuning.py  test_tabular_recipes.py  (+3 more)
(+107 files in other folders)
