[project]
name = "Equimo"
version = "0.1.3a9"
description = "Implementation of popular vision models in Jax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "einops>=0.8.0",
  "equinox>=0.11.5",
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "loguru>=0.7.3",
  "lz4>=4.4.3",
  "orbax-checkpoint>=0.11.5",
]

[project.optional-dependencies]
torch = [
  "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
