[project]
name = "Equimo"
version = "1.0.1"
description = "Implementation of popular vision models in Jax"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "einops>=0.8.0",
  "equinox>=0.11.5",
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "loguru>=0.7.3",
  "lz4>=4.4.3",
  "requests>=2.32.3",
  "semver>=3.0.4",
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering :: Artificial Intelligence",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
# Useful to convert models from PyTorch
torch = [
  "torch>=2.6.0",
  "timm>=1.0.15",
]
# Required for equimo.experimental.text (text tokenizer)
text = [
  "tensorflow>=2.18.1",
  "tensorflow-text>=2.18.1",
]
# Required for some external utils
extras = [
  "matplotlib>=3.10.1",
  "pillow>=11.1.0",
  "scikit-learn>=1.6.1",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    # "timm>=1.0.20",
    # "torch>=2.9.0",
]

# [tool.pytest.ini_options]
# pythonpath = ["src"]
