[project]
name = "Equimo"
version = "1.1.1"
description = "Implementation of modern multimodal models in JAX/Equinox"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "banax>=0.1.2",
  "einops>=0.8.0",
  "equinox>=0.11.5",
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "loguru>=0.7.3",
  "lz4>=4.4.3",
  "requests>=2.32.3",
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering :: Artificial Intelligence",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
# Useful to convert models from PyTorch
torch = [
  "torch>=2.6.0",
  "timm>=1.0.15",
]
# Required for equimo.language tokenizers
language = [
  "tensorflow>=2.18.1",
  "tensorflow-text>=2.18.1",
]
# Required for some external utils
extras = [
  "matplotlib>=3.10.1",
  "pillow>=11.1.0",
  "scikit-learn>=1.6.1",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.ruff.lint]
ignore = ["E731", "E741", "F722"]

[tool.ruff.lint.per-file-ignores]
"tests/test_equimo_integration.py" = ["F401"]
